<resources>
    <string name="app_name">OptiSki</string>
    <string name="optiski">OptiSki</string>
    <string name="levels_image_path">levels/%d.jpg</string>
    <string name="image_loading_error">Problem in loading image</string>
    <string name="logo_d_optiski">logo d\'OptiSki</string>
    <string name="connexion">connexion</string>
    <string name="connexion_google">connexion avec google</string>
    <string name="inscription">inscription</string>
    <string name="connexion_google_text">Connexion avec Google</string>
    <string name="connexion_text">connexion</string>
    <string name="inscription_text">Inscription</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mail_example">mail@example.com</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_mot_de_passe">Confirmer le mot de passe</string>
    <string name="password_example">********************</string>
    <string name="ou">OU</string>
    <string name="next">next</string>
    <string name="inscription_button_text">inscription</string>
    <string name="image_filler">image filler</string>
    <string name="nom">Nom</string>
    <string name="beginner">Débutant</string>
    <string name="intermediate">Intermédiaire</string>
    <string name="advanced">Avancé</string>
    <string name="selected_item">Selected item</string>
    <string name="choix_station">Choix de la station</string>
    <string name="gps_pin">GPS pin</string>
    <string name="clock">clock</string>
    <string name="hour">3:00</string>
    <string name="skier_image">image d\'un skieur</string>
    <string name="start_button">bouton start</string>
    <string name="plan_pistes">plan des pistes réduit</string>
    <string name="tk_roches_noires">télésiège Roches Noires</string>
    <string name="belette">Piste Belette (bleue)</string>
    <string name="elan">Piste Elan (rouge)</string>
    <string name="lauzes">Piste Les Lauzes (bleue)</string>
    <string name="marmottes">Piste Marmottes (rouge)</string>
    <string name="web_client_id">295480818850-10fd218ogp694hqv11nqm9ttlkjpn5ll.apps.googleusercontent.com</string>
    <string name="cancel">Annuler</string>
    <string name="validate">Valider</string>
    <string name="fin_tracks">Vous avez fait toutes les pistes ? Validez pour terminer la session</string>

    <!-- Position alert -->
    <string name="position_alert_title">Localisation</string>
    <string name="position_alert_msg">Voulez-vous autoriser la localisation ?</string>
    <string name="ok">Ok</string>
    <string name="reject">Refuser</string>
    <string name="position_accept">Localisation activée</string>
    <string name="position_denied">Nous n\'utiliserons pas votre localisation</string>
    <string name="fin_de_session">Félicitations ! Vous avez fini votre session de ski !</string>
    <string name="image_de_fin">Image de fin</string>

    <string name="save">Sauvegarder</string>
    <string name="profile">Profil</string>
    <string name="level">level</string>
    <string-array name="Stations">
        <item>La Rosière</item>
        <item>Les Arcs</item>
        <item>Courchevel</item>
        <item>Méribel</item>
        <item>Le Valinouet</item>
        <item>Bromont</item>
        <item>Mont-Belu</item>
        <item>Mont-Fortin</item>
    </string-array>

    <string-array name="niveaux">
        <item>Débutant</item>
        <item>Intermédiaire</item>
        <item>Avancé</item>
    </string-array>

    <string-array name="niveaux_explications">
        <item>Le niveau débutant vous proposera un itinéraire fait de pistes vertes et bleues,
        afin de vous permettre de vous améliorer sans risque !</item>
        <item>Le niveau intermédiaire rajoutera sur l\'itinéraire des pistes rouges,
        pour plus de fun et de vitesse !</item>
        <item>Le niveau avancé n\'a plus aucune restriction de pistes, et vous permettra donc
        d\'aller ou bon vous semble !</item>
    </string-array>

</resources>