<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ChoicesActivity">

    <TextView
        android:id="@+id/optiski"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optiski"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/choix_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/choix_station"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optiski" />

    <ImageView
        android:id="@+id/gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/gps_pin"
        app:layout_constraintEnd_toStartOf="@+id/choix_station"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optiski"
        app:srcCompat="@drawable/gps_pin" />

    <LinearLayout
        android:id="@+id/timelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/choix_station"
        >

        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/clock"
            app:srcCompat="@drawable/clock" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@id/helpButton"
            app:layout_constraintStart_toStartOf="@id/clock">

            <NumberPicker
                android:id="@+id/hourpicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <NumberPicker
                android:id="@+id/minutepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/question" />
    </LinearLayout>

    <TextView
        android:id="@+id/textNomAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timelayout" />

    <ImageView
        android:id="@+id/imageSkier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skier_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNomAccount"
        app:srcCompat="@drawable/image_filler" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSkier"
        app:srcCompat="@drawable/start_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>